@@ -7,6 +7,10 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 
 ## [Unreleased]
 
+### Fixed
+
+- Resize canvas to video container dimensions
+
 ## [2.0.0] - 2023-10-09
 
 ### Fixed
